--- a/templates/crew-sheet.hbs
+++ b/templates/crew-sheet.hbs
@@ -7,7 +7,7 @@
   {{#if preparedItems.playbook}}
   {{> "systems/eunos-blades/templates/components/comp.hbs" playbookData
   class="comp-xp comp-xp-playbook comp-horizontal comp-teeth comp-teeth-long"
-  tooltipClass="tooltip-small tooltip-playbook tooltip-left"
+  tooltipClass="tooltip-small tooltip-playbook tooltip-left tooltip-wide"
   }}
   {{/if}}
 
