--- a/templates/roll/partials/roll-collab-gm-number-line.hbs
+++ b/templates/roll/partials/roll-collab-gm-number-line.hbs
@@ -13,6 +13,10 @@
       </div>
     {{/for}}
   </div>
+  {{#if tooltip}}
+  <div class="tooltip">
+    {{{tooltip}}}
+  </div>
 </div>
 
 {{/with}}
