--- a/scss/components/_cohort-block.scss
+++ b/scss/components/_cohort-block.scss
@@ -170,11 +170,11 @@
             transition: 0.25s;
           }
           .harm-effect { display: none }
-          .cohort-harm-tooltip {
-            padding: 0;
-            bottom: 22px;
-            > h2, p {padding: 0 10px; margin: 0}
-          }
+          // .cohort-harm-tooltip {
+          //   padding: 0;
+          //   bottom: 22px;
+          //   > h2, p {padding: 0 10px; margin: 0}
+          // }
 
 
           &.harm-level-0 { display: none }
@@ -216,11 +216,11 @@
         svg.roll-button-icon {
           stroke-width: 20px;
         }
-        .tooltip-cohort-roll {
-          padding: 0;
-          bottom: 23px;
-          > h2 { padding: 0 10px; margin: 0}
-        }
+        // .tooltip-cohort-roll {
+        //   padding: 0;
+        //   bottom: 23px;
+        //   > h2 { padding: 0 10px; margin: 0}
+        // }
 
         &[data-roll-label="Untrained"] {
           .roll-button-icon {
@@ -251,57 +251,57 @@
       justify-content: flex-end;
       padding: 0 0 5px 0;
 
-      .tooltip-trigger {
-        // z-index: 5 !important;
-        margin: -7px 3px -20px 0;
+      // .tooltip-trigger {
+      //   // z-index: 5 !important;
+      //   margin: -7px 3px -20px 0;
 
-        .tooltip-scaling-elem {
-          margin: 0 2px;
-          padding: 0 8px;
-          border-radius: 5px;
-          font-family: var(--font-emphasis);
-          color: var(--blades-white);
-          background: var(--blades-black-dark);
-          font-size: 10px;
-          text-transform: uppercase;
-          line-height: 12px;
-          // box-shadow: 3px 3px 5px var(--blades-black);
+      //   .tooltip-scaling-elem {
+      //     margin: 0 2px;
+      //     padding: 0 8px;
+      //     border-radius: 5px;
+      //     font-family: var(--font-emphasis);
+      //     color: var(--blades-white);
+      //     background: var(--blades-black-dark);
+      //     font-size: 10px;
+      //     text-transform: uppercase;
+      //     line-height: 12px;
+      //     // box-shadow: 3px 3px 5px var(--blades-black);
 
-          &.edge-name {
-            // background: var(--blades-green-dark);
-            outline: 1px inset #00FF00;
-          }
-          &.flaw-name {
-            // background: var(--blades-red-dark);
-            outline: 1px inset #FF0000;
-          }
-        }
-      }
-      .tooltip {
-        left: unset;
-        right: 200px;
-        bottom: 10px;
+      //     &.edge-name {
+      //       // background: var(--blades-green-dark);
+      //       outline: 1px inset #00FF00;
+      //     }
+      //     &.flaw-name {
+      //       // background: var(--blades-red-dark);
+      //       outline: 1px inset #FF0000;
+      //     }
+      //   }
+      // }
+      // .tooltip {
+      //   left: unset;
+      //   right: 200px;
+      //   bottom: 10px;
 
-        &.tooltip-edge {
-          // background: var(--blades-green-dark-fade);
-          border-color: var(--blades-green-bright);
-          box-shadow:
-          inset 0 0 3px var(--blades-green-dark),
-          inset 0 0 5px var(--blades-green-dark),
-          inset 0 0 15px var(--blades-green-dark),
-          inset 0 0 15px var(--blades-green-dark);
-        }
+      //   // &.tooltip-edge {
+      //   //   // background: var(--blades-green-dark-fade);
+      //   //   border-color: var(--blades-green-bright);
+      //   //   box-shadow:
+      //   //   inset 0 0 3px var(--blades-green-dark),
+      //   //   inset 0 0 5px var(--blades-green-dark),
+      //   //   inset 0 0 15px var(--blades-green-dark),
+      //   //   inset 0 0 15px var(--blades-green-dark);
+      //   // }
 
-        &.tooltip-flaw {
-          // background: var(--blades-red-dark-fade);
-          border-color: var(--blades-red-bright);
-          box-shadow:
-            inset 0 0 3px var(--blades-red-dark),
-            inset 0 0 5px var(--blades-red-dark),
-            inset 0 0 15px var(--blades-red-dark),
-            inset 0 0 15px var(--blades-red-dark);
-        }
-      }
+      //   // &.tooltip-flaw {
+      //   //   // background: var(--blades-red-dark-fade);
+      //   //   border-color: var(--blades-red-bright);
+      //   //   box-shadow:
+      //   //     inset 0 0 3px var(--blades-red-dark),
+      //   //     inset 0 0 5px var(--blades-red-dark),
+      //   //     inset 0 0 15px var(--blades-red-dark),
+      //   //     inset 0 0 15px var(--blades-red-dark);
+      //   // }
+      // }
     }
 
     .filled-label {
