--- a/scss/core/_globals.scss
+++ b/scss/core/_globals.scss
@@ -212,10 +212,16 @@
     width: 100%;
   }
 
-  .tooltip-trigger { pointer-events: auto !important }
+  .tooltip-trigger, .tooltip-container {
+    position: relative;
+  }
+
+  .tooltip-trigger {
+    pointer-events: auto !important
+  }
 
   .tooltip {
-    opacity: 0;
+    visibility: hidden;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -225,26 +231,31 @@
     background: var(--blades-black-dark);
 
     width: auto;
-    // max-width: 400px;
+    max-width: 400px;
 
-    padding: 0 toRem(5px);
+    padding: toRem(10px);
     border: #{toRem(1px)} solid var(--blades-grey);
-    border-radius: toRem(3px);
+    border-radius: toRem(5px);
+    box-shadow: 5px 5px 10px var(--blades-black-dark);
 
     // hyphens: auto;
     text-align: center;
     // text-wrap: balance;
 
     position: absolute;
-    top: unset;
-    left: -200px;
-    bottom: 50px;
-    z-index: zLevel(+10);
+    // top: unset;
+    // left: -200px;
+    // bottom: 50px;
+    // z-index: zLevel(+10);
 
     pointer-events: none;
 
+    transform-origin: 50% 100%;
+
+    // bottom: 50px;
+
     > h1 {
-      text-align: center;
+      text-align: left;
       background: transparent;
       font-family: var(--font-emphasis);
       text-shadow:
@@ -252,17 +263,22 @@
         0px 0px 4px var(--blades-black-dark),
         0px 0px 4px var(--blades-black-dark),
         0px 0px 4px var(--blades-black-dark);
-      width: 90%;
-      margin: 0 auto;
+      width: 100%;
+      margin: 0;
       border-bottom: 2px solid var(--blades-white);
       white-space: nowrap;
+      font-family: var(--font-emphasis);
+      text-transform: none;
 
       &:last-of-type { margin-bottom: 5px }
     }
 
-    > p {
+    > p, ul, ol, li {
+      font-family: var(--font-primary);
       margin: 5px 0;
-      text-wrap: balance;
+      text-align: left;
+      text-wrap: normal;
+
     }
 
     > ul, ol {
@@ -276,91 +292,96 @@
       color: var(--blades-white-bright);
     }
 
-    &.tooltip-left {
-      left: 200px;
-      max-width: unset;
-    }
+  //   &.tooltip-wide {
+  //     max-width: unset;
+  //     width: 600px;
+  //   }
 
-    &.tooltip-portrait {
-      bottom: -45px;
-      left: -200px;
-    }
+  //   &.tooltip-left {
+  //     // left: 200px;
+  //     // translate: 0px 50% !important;
+  //   }
 
-    &.tooltip-playbook {
-      bottom: unset;
-      top: 0px;
-      left: -220px;
-    }
+  //   &.tooltip-portrait {
+  //     // bottom: -45px;
+  //     // left: -200px;
+  //   }
 
-    &.tooltip-trauma {
-      left: -300px;
-    }
+  //   &.tooltip-playbook {
+  //     // bottom: unset;
+  //     // top: 0px;
+  //     // left: -220px;
+  //   }
 
-    &.tooltip-dialog-selection {
-      left: -300px;
-      bottom: 75px;
-    }
+  //   &.tooltip-trauma {
+  //     // left: -300px;
+  //   }
 
-    &.tooltip-attribute {
-      left: -110px;
-      bottom: 10px;
-      translate: 0% 50% !important;
-      > p { font-size: 16px; }
+  //   &.tooltip-dialog-selection {
+  //     // left: -300px;
+  //     // bottom: 75px;
+  //   }
 
-    }
+  //   &.tooltip-attribute {
+  //     // left: -110px;
+  //     // bottom: 10px;
+  //     // translate: 0% 50% !important;
+  //     > p { font-size: 16px; }
 
-    &.tooltip-action {
-      left: unset;
-      right: -100px;
-      bottom: 0px;
-      max-width: 525px;
-      translate: 0% 50% !important;
+  //   }
 
-      > p { font-size: 16px; }
-    }
+  //   &.tooltip-action {
+  //     // left: unset;
+  //     // right: -100px;
+  //     // bottom: 0px;
+  //     max-width: 525px;
+  //     // translate: 0% 50% !important;
 
-    &.tooltip-roll-mod {
-      left: calc(50% + 350px);
-      bottom: 20px;
-      max-width: 350px;
-      width: 350px;
-      min-width: 350px;
-      translate: -50% 0% !important;
-      text-align: center;
-      hyphens: none;
+  //     > p { font-size: 16px; }
+  //   }
 
-      > p:not(:last-of-type) { margin-bottom: 10px; }
-    }
+  //   &.tooltip-roll-mod {
+  //     // left: calc(50% + 350px);
+  //     // bottom: 20px;
+  //     max-width: 350px;
+  //     width: 350px;
+  //     min-width: 350px;
+  //     // translate: -50% 0% !important;
+  //     text-align: center;
+  //     hyphens: none;
 
-    &.tooltip-pos-effect-trade {
-      width: 330px;
-      max-width: 330px;
-      min-width: 330px;
-      bottom: 5px;
-      left: 0px;
-      font-family: var(--font-default);
-      font-size: toRem(14px);
-      text-transform: none;
-      text-align: center;
-    }
+  //     > p:not(:last-of-type) { margin-bottom: 10px; }
+  //   }
 
-    &.tooltip-roll-trait-pc {
-      bottom: 100px;
-      table tbody tr {
-        &:nth-child(4n) {
-          border-bottom: 2px solid var(--blades-white);
-        }
-        td:nth-child(1) {
-          text-align: right;
-        }
-        td:nth-child(2) {
-          text-align: left;
-        }
-        td:nth-child(3) {
-          text-align: left;
-        }
-      }
-    }
+  //   &.tooltip-pos-effect-trade {
+  //     width: 330px;
+  //     max-width: 330px;
+  //     min-width: 330px;
+  //     // bottom: 5px;
+  //     // left: 0px;
+  //     font-family: var(--font-default);
+  //     font-size: toRem(14px);
+  //     text-transform: none;
+  //     text-align: center;
+  //   }
+
+  //   &.tooltip-roll-trait-pc {
+  //     // bottom: 100px;
+  //     table tbody tr {
+  //       &:nth-child(4n) {
+  //         border-bottom: 2px solid var(--blades-white);
+  //       }
+  //       td:nth-child(1) {
+  //         text-align: right;
+  //       }
+  //       td:nth-child(2) {
+  //         text-align: left;
+  //       }
+  //       td:nth-child(3) {
+  //         text-align: left;
+  //       }
+  //     }
+  //   }
   }
 
   .tooltip-scaling-elem {
@@ -579,10 +600,10 @@
             }
           }
 
-          .tooltip.pc-summary-asset-tooltip {
-            font-size: 10px;
-            line-height: 10px;
-          }
+          // .tooltip.pc-summary-asset-tooltip {
+          //   font-size: 10px;
+          //   line-height: 10px;
+          // }
         }
       }
 
