--- a/templates/actor-sheet.hbs
+++ b/templates/actor-sheet.hbs
@@ -12,7 +12,7 @@
   {{#if preparedItems.playbook}}
     {{> "systems/eunos-blades/templates/components/comp.hbs" playbookData
     class="comp-xp comp-xp-playbook comp-horizontal comp-teeth comp-teeth-long"
-    tooltipClass="tooltip-small tooltip-playbook tooltip-left"
+    tooltipClass="tooltip-small tooltip-playbook tooltip-left tooltip-wide"
     }}
   {{/if}}
 
@@ -105,6 +105,53 @@
       {{/unless}}
 
     </section>
+
+    {{!-- Downtime Actions --}}
+    {{#if (test gamePhase "==" "Downtime")}}
+    <section class="sheet-mid-bar flex-vertical full-width section-downtime-actions">
+      <label class="comp tab-label flex-horizontal full-width">
+        <span class="tab-title">Downtime Actions</span>
+
+        {{!-- Remaining Actions, if Any --}}
+        {{#if (test downtimeData.actionsRemaining ">" 0)}}
+          {{> "systems/eunos-blades/templates/components/dotline.hbs" downtimeData.dotline }}
+        {{else if isDisplayingCosts}}
+          <div class="downtime-cost-selection flex-horizontal">
+            <div class="downtime-cost-button cost-button-coin {{~#if (test system.downtime_action_selected_cost "==" "Coin")}} cost-selected{{/if}}"
+              data-action="toggle-value"
+              data-target="system.downtime_action_selected_cost"
+              data-toggle-on-val="Coin"
+              data-toggle-off-val="">
+              Pay 1 Coin
+            </div>
+            <div class="downtime-cost-button cost-button-rep {{~#if (test system.downtime_action_selected_cost "==" "Rep")}} cost-selected{{/if}}"
+              data-action="toggle-value"
+              data-target="system.downtime_action_selected_cost"
+              data-toggle-on-val="Rep"
+              data-toggle-off-val="">
+              Pay 1 Coin
+            </div>
+          </div>
+        {{/if}}
+      </label>
+
+        {{!-- Action Selection  --}}
+        {{#if downtimeData.isDisplayingActions}}
+        <div class="downtime-action-selection flex-horizontal full-width">
+          {{#each downtimeData.actionsList as |display key|}}
+          <div class="downtime-action-button tooltip-trigger"
+            data-action="downtime-action-{{key}}">
+            <span class="downtime-action-display">{{display}}</span>
+            <div class="tooltip tooltip-small tooltip-trauma">
+              {{{lookup ../downtimeData.actionsTooltips key}}}
+            </div>
+          </div>
+          {{/each}}
+        </div>
+        {{/if}}
+    </section>
+
+    {{/if}}
 
     {{!-- Stress and Trauma --}}
     <section class="sheet-mid-bar flex-horizontal full-width">
@@ -367,8 +414,11 @@
       <section class="action-ratings flex-vertical">
         {{#each attributeData as |attribute_data attribute_name|}}
         <div class="comp comp-horizontal comp-attribute">
-          <label class="comp-label tooltip-trigger" data-roll-trait="{{attribute_name}}"><span class="tooltip-scaling-elem">{{#if (test (lookup ../system.resistance_bonus attribute_name) ">" 0)}}+{{lookup ../system.resistance_bonus attribute_name}}&nbsp;{{/if}}{{case "title" attribute_name}}</span></label>
-          <div class="tooltip tooltip-attribute tooltip-small">{{{attribute_data.tooltip}}}</div>
+          <label class="comp-label tooltip-trigger"
+            data-roll-trait="{{attribute_name}}">
+            <span class="tooltip-scaling-elem">{{#if (test (lookup ../system.resistance_bonus attribute_name) ">" 0)}}+{{lookup ../system.resistance_bonus attribute_name}}&nbsp;{{/if}}{{case "title" attribute_name}}</span>
+            <div class="tooltip tooltip-attribute tooltip-small">{{{attribute_data.tooltip}}}</div>
+          </label>
           <div class="comp-body">
             {{> "systems/eunos-blades/templates/components/dotline.hbs"
             data=(lookup ../system.experience attribute_name)
@@ -395,8 +445,11 @@
             blockClass="action"
             }}
           </div>
-          <label class="comp-label tooltip-trigger" data-roll-trait="{{action_name}}"><span class="tooltip-scaling-elem">{{case "upper" action_name}}</span></label>
-          <div class="tooltip tooltip-action tooltip-small tooltip-left">{{{action_data.tooltip}}}</div>
+          <label class="comp-label tooltip-trigger"
+            data-roll-trait="{{action_name}}">
+              <span class="tooltip-scaling-elem">{{case "upper" action_name}}</span>
+              <div class="tooltip tooltip-action tooltip-small tooltip-left tooltip-wide">{{{action_data.tooltip}}}</div>
+          </label>
         </div>
         {{/each}}
         {{/each}}
