--- a/templates/components/clock.hbs
+++ b/templates/components/clock.hbs
@@ -10,7 +10,8 @@
     <img class="clock-interior-img" src="systems/eunos-blades/assets/clocks/clock-glow-{{color}}.webp" style="{{#if (test value "==" 0)}}opacity: 0;{{/if}}" />
     {{/if}}
   </div>
-  <svg class="clock-frame {{~#if tooltip}} tooltip-trigger{{/if}}" viewBox="0 0 400 400">
+  <div class="tooltip-container clock-tooltip-container {{~#if tooltip}} tooltip-trigger{{/if}}">
+  <svg class="clock-frame" viewBox="0 0 400 400">
     <g class="segmented" data-size="{{max}}">
       {{#for 1 max}}
         <use href="#{{../max}}-segment" />
@@ -18,6 +19,7 @@
     </g>
   </svg>
   {{#if tooltip}}<div class="tooltip">{{{tooltip}}}</div>{{/if}}
+  </div>
   {{/if}}
   <svg class="clock-frame clock-bg {{~#unless isVisible}} hidden-clock{{/unless}}" viewBox="0 0 400 400">
     <circle class="clock-bg" cx="200" cy="200" r="200" />
