--- a/templates/components/consequence-accepted.hbs
+++ b/templates/components/consequence-accepted.hbs
@@ -1,6 +1,10 @@
 {{eLog "Consequence-Accepted Context" this}}
-<div class="comp consequence-display-container full-width consequence-accepted {{~#if blockClass}} {{blockClass}}{{/if}}"/>
-
+<div class="comp consequence-display-container full-width consequence-accepted {{~#if (test type "==" "None")}} consequence-type-none{{/if}}{{~#if blockClass}} {{blockClass}}{{/if}}">
+  {{#if (test type "==" "None")}}
+  <div class="consequence-name-container">
+    <label class="consequence-name base-consequence">(Negated)</label>
+  </div>>
+  {{else}}
   <div class="consequence-icon-container">
     <div class="consequence-icon-circle base-consequence">
       <img class="consequence-icon-img" src="systems/eunos-blades/assets/icons/consequence-icons/base-{{icon}}.svg" />
@@ -10,9 +14,8 @@
   <div class="consequence-type-container">
     <label class="consequence-type base-consequence">{{typeDisplay}}</label>
   </div>
-
   <div class="consequence-name-container">
     <label class="consequence-name base-consequence">{{name}}</label>
   </div>
-
+  {{/if}}
 </div>
