--- a/templates/roll/partials/roll-collab-action.hbs
+++ b/templates/roll/partials/roll-collab-action.hbs
@@ -59,19 +59,24 @@
         <div class="roll-sheet-sub-block roll-header-block flex-horizontal">
           <label class="filled-label">Rolling:</label>
           {{#if rollTraitOptions}}
-          <select class="shadowed roll-sheet-select roll-sheet-select-trait tooltip-trigger" name="flags.eunos-blades.rollCollab.rollTrait">
-            {{#select rollTrait}}
-            {{#each rollTraitOptions}}
-            <option value="{{value}}">{{name}}</option>
-            {{/each}}
-            {{/select}}
-          </select>
-          <span class="tooltip tooltip-roll-trait tooltip-roll-trait-pc">{{{rollTraitData.pcTooltip}}}</span>
+          <div class="tooltip-container roll-sheet-select-tooltip-container tooltip-trigger">
+            <select class="shadowed roll-sheet-select roll-sheet-select-trait" name="flags.eunos-blades.rollCollab.rollTrait">
+              {{#select rollTrait}}
+              {{#each rollTraitOptions}}
+              <option value="{{value}}">{{name}}</option>
+              {{/each}}
+              {{/select}}
+            </select>
+            <span class="tooltip tooltip-roll-trait tooltip-roll-trait-pc">{{{rollTraitData.pcTooltip}}}</span>
+          </div>
           {{else}}
-          <span class="shadowed roll-readonly {{~#if rollTraitData.pcTooltip}} tooltip-trigger{{/if}}">{{rollTraitData.name}}</span>
+          <span class="shadowed roll-readonly {{~#if rollTraitData.pcTooltip}} tooltip-trigger{{/if}}">
+          {{rollTraitData.name}}
           {{#if rollTraitData.pcTooltip}}
           <span class="tooltip tooltip-roll-trait tooltip-roll-trait-pc">{{{rollTraitData.pcTooltip}}}</span>
           {{/if}}
+          </span>
+
           {{/if}}
           <div class="roll-dotline-block">
           {{> "systems/eunos-blades/templates/components/dotline.hbs"
@@ -153,10 +158,10 @@
           {{#if canTradePosition}}
           <div class="pos-effect-trade-block tooltip-trigger" data-action="tradePosition" data-value="{{rollPosEffectTrade}}">
             <i class="fa-sharp {{#if rollPosEffectTrade}}fa-light{{else}}fa-solid{{/if}} fa-triangle fa-flip-vertical"></i>
-          </div>
-          <div class="tooltip tooltip-small tooltip-left tooltip-pos-effect-trade">
-            <h1>Trading Position for Effect</h1>
-            <p><strong>Increase</strong> <strong class='gold-bright'>Effect</strong> at the cost of <strong class='red-bright'>Position</strong>.</p>
+            <div class="tooltip tooltip-small tooltip-left tooltip-wide tooltip-pos-effect-trade">
+              <h1>Trading Position for Effect</h1>
+              <p><strong>Increase</strong> <strong class='gold-bright'>Effect</strong> at the cost of <strong class='red-bright'>Position</strong>.</p>
+            </div>
           </div>
           {{/if}}
         </div>
@@ -200,10 +205,10 @@
           {{#if canTradeEffect}}
           <div class="pos-effect-trade-block tooltip-trigger" data-action="tradeEffect" data-value="{{rollPosEffectTrade}}">
             <i class="fa-sharp {{#if rollPosEffectTrade}}fa-light{{else}}fa-solid{{/if}} fa-triangle"></i>
-          </div>
-          <div class="tooltip tooltip-small tooltip-left tooltip-pos-effect-trade">
-            <h1>Trading Effect for Position</h1>
-            <p><strong>Increase</strong> <strong class='gold-bright'>Position</strong> at the cost of <strong class='red-bright'>Effect</strong>.</p>
+            <div class="tooltip tooltip-small tooltip-left tooltip-wide tooltip-pos-effect-trade">
+              <h1>Trading Effect for Position</h1>
+              <p><strong>Increase</strong> <strong class='gold-bright'>Position</strong> at the cost of <strong class='red-bright'>Effect</strong>.</p>
+            </div>
           </div>
           {{/if}}
         </div>
