--- a/templates/roll/partials/roll-collab-indulgevice-gm.hbs
+++ b/templates/roll/partials/roll-collab-indulgevice-gm.hbs
@@ -152,7 +152,7 @@
           <i class="fa-solid fa-triangle icon-4"></i>
           <i class="fa-solid fa-triangle icon-5"></i>
         </div>
-        <div class="tooltip tooltip-small tooltip-left tooltip-pos-effect-trade">
+        <div class="tooltip tooltip-small tooltip-left tooltip-wide tooltip-pos-effect-trade">
           <p><strong class="inline-code">Left-Click</strong> to <strong>increase</strong> <strong class='gold-bright'>Position</strong> at the cost of <strong class='red-bright'>Effect</strong>.
           <br><strong class="inline-code">Right-Click</strong> to <strong>increase</strong> <strong class='gold-bright'>Effect</strong> at the cost of <strong class='red-bright'>Position</strong>.
           <br>Click again to reset.</p>
